podcast: handle failure to update the timestamp file a bit better

If we can't create or update the timestamp file, just disable periodic
updates.

https://bugzilla.gnome.org/show_bug.cgi?id=776292